marko/src/style.scss
$red:    rgb(255,  99, 132);
$blue:   rgb( 54, 162, 235);
$yellow: rgb(255, 206,  86);
$cyan:   rgb( 75, 192, 192);
$violet: rgb(153, 102, 255);
$orange: rgb(255, 159,  64);

:export {
  red: $red;
  blue: $blue;
  yellow: $yellow;
  cyan: $cyan;
  violet: $violet;
  orange: $orange;
}

@import "pikaday/scss/pikaday.scss";
@import "uikit/src/scss/variables-theme.scss";
@import "uikit/src/scss/mixins-theme.scss";
@import "uikit/src/scss/uikit-theme.scss";
@import "slider.scss";

$nav-width: 18em;
$header-height: 10em;

.main-container {
  display: flex;

  @media (max-width: $breakpoint-xsmall-max) {
    flex-wrap: wrap;
  }

  @media (min-width: $breakpoint-small) {
    height: 100%;
    position: fixed;
    top: $header-height;
    width: 100%;
  }
}

.content-container {
  $top-padding: 1.5em;

  width: 100%;
  overflow: auto;
  padding: $top-padding 0 $top-padding 0;

  @media (min-width: $breakpoint-small) {
    height: calc(100% - #{$header-height} - (#{$top-padding} * 2));
    left: $nav-width;
    width: calc(100% - #{$nav-width});

    .uk-container {
      height: 100%;
    }
  }
}

.sidebar {
  flex: 1 1 $nav-width;
  width: $nav-width;
  box-sizing: border-box;
  background-color: darken(white, 10%);


  @media (max-width: $breakpoint-xsmall-max) {
    flex: auto;
    border-bottom: 1px solid darken(white, 13%);

    &.uk-section {
      padding: .75em 0 .75em 0;
    }

    li:not(.uk-active) {
      display: none;
    }

    ul:active li, ul:hover li {
      display: block;
    }

    li a {
      display: inline-block;
    }
  }

  @media (min-width: $breakpoint-small) {
    height: 100%;
    border-right: 1px solid darken(white, 13%);
  }
}

header {
  @media (min-width: $breakpoint-small) {
    position: fixed;
    padding: initial;
  }

  background-color: darken(white, 7%);
  padding: 1em 0 1em 0;
  height: $header-height;
  width: 100%;
  border-bottom: 1px solid darken(white, 10%);
  display: flex;
  align-items: center;

  .uk-container {
    @media (min-width: $breakpoint-small) {
      margin: initial;
    }
  }
}

.step-slider {
  display: flex;
  padding: 1em 0 1em 0;

  input[type='range'] {
    flex: 3;
    padding-right: 0.5em;
  }

  input[type='number'] {
    flex: 1;
    padding-left: 0.5em;
    text-align: right;
  }
}

html {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
  height: 100%;
  min-height: 100%;
}

.chart-outer-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.chart {
  width: 100%;
  height: 100%;
  margin: .375em;
  background-color: darken(white, 7%);
  padding: 0.12em;
  border-radius: 4.5px;


  span {
    display: inline-block;
    width: 100%;
    background-color: darken(white, 10%);
    padding: 1px 0 1px 0;

    &::before {
      content: "\00a0 ";
    }
  }

  @media (min-width: $breakpoint-small) {
    flex: 1 1 calc(50% - 0.75em);

    &:nth-child(even) {
      margin-right: 0;
    }

    &:nth-child(odd) {
      margin-left: 0;

      &:last-child {
        margin-left: 0;
        margin-right: 0;
      }
    }
  }
}

.dates {
  display: flex;
  flex-direction: column;

  span {
    display: inline-block;
  }

  span:nth-child(odd) {
    font-weight: bold;
    padding-right: 0.3em;
  }

  div:nth-child(odd) {
    padding-top: 0.5em;
  }
}

.date-container {
  display: flex;

  @media (min-width: $breakpoint-small) {
    max-width: 30em;
  }

  input {
    &:nth-child(odd) {
      margin-right: 5px;
    }

    &:nth-child(even) {
      margin-left: 5px;
    }

    &:hover {
      cursor: pointer;
    }

    text-align: center;
  }
}

.update-data {
  width: 100%;
  margin: 0.75em 0 0.75em 0;

  @media (min-width: $breakpoint-small) {
    width: initial;
  }
}

.chartjs-render-monitor {
  opacity: 0.8 !important;
}

